@@ -1,3 +1,7 @@
+2010-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* devnag.c: cast arguments in order to avoid compiler warnings.
+
 2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Avoid maximal compiler warnings.
